tours page and all assets

--- a/app/jade/include/footer.jade
+++ b/app/jade/include/footer.jade
@@ -2,7 +2,8 @@
   .container
     .row
       .col-md-3.colomn.first
-        img.m-t-sm(src="img/sapta-tour-logo-medium.png", alt="")
+        a(href="index.html")
+          img.m-t-sm(src="img/sapta-tour-logo-medium.png", alt="")
 
         img.m-t-xl.block(src="img/24-hours-tours-and-travel-service.png", alt="24 Hours Tours & Travel  Service")
 
