--- a/app/jade/include/header.jade
+++ b/app/jade/include/header.jade
@@ -1,12 +1,12 @@
 nav.navbar(role='navigation')
   .container
     .navbar-header
-      a.navbar-brand(href='#', title='TS Starter')
+      a.navbar-brand(href='index.html', title='TS Starter')
         img(src='img/sapta-tour-logo.png', title='TS Starter')
     #navbar.collapse.navbar-collapse
       ul.nav.navbar-nav.main-menu
         li.active
-          a(href='#')
+          a(href='tours.html')
             i.ico.ico-tours
             span.block TOURS
         li
