--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -303,9 +303,4 @@ block main
               strong  Inspirations
         .clearfix
 
-  .tip-inquiry
-    .container.bg-white
-      i.ico.ico-luggage
-      span.big.m-l.m-r Couldn’t find your destination ?
-      span.small Let us create a Custom trip just for you
-      a.btn.btn-white.pull-right(href="#") Yes, Please
+  include helpers/inquiry
