--- a/app/less/helper/app.utilities.less
+++ b/app/less/helper/app.utilities.less
@@ -59,13 +59,16 @@ label {
 .text-darker{color: #393030}
 .text-dark{color: #666}
 .text-dark-light{color: #9a9a9a}
+.text-white{color: #fff}
+.text-yellow{color: #f6b44b}
+
 .text-orange{color: #f6b44b}
 a.text-orange {color: #ef9630}
 .text-xl{font-size: 22px}
 .text-lg{font-size: @font-size-large}
-.text-md{font-size: (@font-size-base + 1)}
-.text-sm{font-size: @font-size-small}
-.text-xs{font-size: (@font-size-small - 1)}
+.text-md{font-size: @font-size-base + 2}
+.text-sm{font-size: @font-size-small + 1 }
+.text-xs{font-size: @font-size-small - 2}
 .text-ellipsis{
   display: block;
   white-space: nowrap;
@@ -123,6 +126,12 @@ a.text-orange {color: #ef9630}
 .b-b-white{border-bottom:1px solid #fff}
 .b-r-white{border-right:1px solid #fff}
 .b-l-white{border-left:1px solid #fff}
+
+.b-dashed {border:1px dashed #e5e5e5}
+.b-dashed-t-gray{border-top:1px dashed #e5e5e5}
+.b-dashed-b-gray{border-bottom:1px dashed #e5e5e5}
+.b-dashed-r-gray{border-right:1px dashed #e5e5e5}
+.b-dashed-l-gray{border-left:1px dashed #e5e5e5}
 
 .b-fb, .b-facebook {border-color: #3b5998;}
 .b-instagram, .b-insta {border-color: #517fa4;}
