--- a/app/jade/include/head.jade
+++ b/app/jade/include/head.jade
@@ -8,6 +8,7 @@ title Sapta Tours and Travel
 // Bootstrap core CSS
 link(href='css/bootstrap.css', rel='stylesheet')
 link(href='css/sapta-tour.css', rel='stylesheet')
+script(src='js/libs/modernizr.custom.js')
 // HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
 //if lt IE 9
   script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
