--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -79,5 +79,23 @@
       height: 26px;
       background-position: -62px -8px;
     }
+
+    &-time {
+      width: 21px;
+      height: 21px;
+      background-position: -118px -12px;
+    }
+
+    &-hotel {
+      width: 14px;
+      height: 19px;
+      background-position: -195px -13px;
+    }
+
+    &-calendar {
+      width: 16px;
+      height: 16px;
+      background-position: -160px -16px;
+    }
   }
 }
