--- a/app/less/helper/app.utilities.less
+++ b/app/less/helper/app.utilities.less
@@ -53,14 +53,20 @@ label {
 .font-thin, .f-thin {
   font-weight: 300;
 }
-.font-bold, .f-bold {
+.font-bold {
   font-weight: 700;
 }
+.f-bold {
+  font-family: "Gotham Black";
+}
+
 .text-darker{color: #393030}
 .text-dark{color: #666}
 .text-dark-light{color: #9a9a9a}
 .text-white{color: #fff}
 .text-yellow{color: #f6b44b}
+.text-light{font-weight: 200; font-family: "Gotham Book"}
+.text-rounded{font-weight: 300; font-family: "Gotham Rounded"}
 
 .text-orange{color: #f6b44b}
 a.text-orange {color: #ef9630}
