--- a/app/less/web/tours.less
+++ b/app/less/web/tours.less
@@ -1,8 +1,12 @@
+.tour-detail-page,
 .tours-page {
   .head-title {
-    font-family: "Gotham-Black"
+    font-family: "Gotham Black";
+    font-size: 30px;
   }
+}
 
+.tours-page {
   .banner {
     height: 170px;
     background: url(../img/heading_customtour.jpg) no-repeat top center;
@@ -15,48 +19,57 @@
   }
 }
 
+.days-trip  {
+  background-color: #fed594;
+  width: 50%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  padding: 11px 0;
+
+  .ico-time {
+    display: block;
+    margin: 8px auto 4px;
+  }
+
+  label {
+    font-size: 11px;
+    font-family: "Gotham Black";
+    color: #8f3000;
+  }
+
+  .count {
+    font-size: 14px;
+    color: #393030;
+    font-family: "Gotham Black"
+  }
+}
+
+.pricing {
+  background-color: #ffca77;
+  width: 50%;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  padding: 22px 0 11px;
+
+  .currency,
+  .price {
+    font-family: "Gotham Black";
+    color: #393030;
+    font-size: 20px;
+  }
+  .currency {
+    font-size: 14px;
+  }
+  label {
+    font-size: 11px;
+    margin-bottom: 3px;
+    color: #8f3000;
+  }
+}
+
 .tour-list {
-  .days-trip  {
-    background-color: #fed594;
-    width: 50%;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    padding: 10px 0;
-
-    .ico-time {
-      display: block;
-      margin: 0 auto 5px;
-    }
-
-    label {
-      font-size: 11px;
-      font-family: "Gotham Black"
-    }
-
-    .count {
-      font-size: 14px;
-      color: #393030;
-    }
-  }
-
-  .pricing {
-    background-color: #ffca77;
-    width: 50%;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    padding: 12px 0 11px;
-
-    .currency,
-    .price {
-      color: #393030;
-      font-size: 20px;
-    }
-    .currency {
-      font-size: 14px;
-    }
-  }
 
   .rollover {
     z-index: 5;
