--- a/app/css/sapta-tour.css
+++ b/app/css/sapta-tour.css
@@ -1796,9 +1796,11 @@ label.error {
 .f-thin {
   font-weight: 300;
 }
-.font-bold,
-.f-bold {
+.font-bold {
   font-weight: 700;
+}
+.f-bold {
+  font-family: "Gotham Black";
 }
 .text-darker {
   color: #393030;
@@ -1814,6 +1816,14 @@ label.error {
 }
 .text-yellow {
   color: #f6b44b;
+}
+.text-light {
+  font-weight: 200;
+  font-family: "Gotham Book";
+}
+.text-rounded {
+  font-weight: 300;
+  font-family: "Gotham Rounded";
 }
 .text-orange {
   color: #f6b44b;
@@ -2625,6 +2635,35 @@ fieldset[disabled] .form-control.bg-white-only {
   height: 16px;
   background-position: -160px -16px;
 }
+.bg-white .ico-food {
+  width: 13px;
+  height: 20px;
+  background-position: -230px -12px;
+}
+.bg-white .ico-departure {
+  width: 22px;
+  height: 11px;
+  background-position: -355px -20px;
+}
+.bg-white .ico-retrun {
+  width: 19px;
+  height: 15px;
+  background-position: -393px -15px;
+}
+.bg-white .ico-idea {
+  width: 24px;
+  height: 22px;
+  background-position: -429px -175px;
+}
+.btn {
+  border-radius: 0;
+  font-family: "Gotham Black";
+  letter-spacing: 1px;
+}
+.btn.book-now {
+  font-size: 18px;
+  line-height: 24px;
+}
 .btn-s-xs {
   min-width: 90px;
 }
@@ -2639,6 +2678,8 @@ fieldset[disabled] .form-control.bg-white-only {
 }
 .btn-s-xl {
   min-width: 200px;
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
 .btn-s-fluid {
   width: 100%;
@@ -3014,8 +3055,8 @@ html[xmlns] .flexslider .slides {
   background-color: #158ea3;
   border-radius: 0;
   border-width: 0;
-  -webkit-box-shadow: 0 -2px 0px #0d7f93, 0 2px 5px rgba(4, 7, 5, 0.7);
-  box-shadow: inset 0 -2px 0px #0d7f93, 0 2px 5px rgba(4, 7, 5, 0.5);
+  -webkit-box-shadow: 0 -2px 0px #0d7f93, 0 1px 4px rgba(4, 7, 5, 0.2);
+  box-shadow: inset 0 -2px 0px #0d7f93, 0 1px 4px rgba(4, 7, 5, 0.2);
 }
 .navbar .navbar-brand {
   padding: 7px 20px 7px 10px;
@@ -3462,8 +3503,10 @@ html[xmlns] .flexslider .slides {
   text-transform: uppercase;
   color: #000;
 }
+.tour-detail-page .head-title,
 .tours-page .head-title {
-  font-family: "Gotham-Black";
+  font-family: "Gotham Black";
+  font-size: 30px;
 }
 .tours-page .banner {
   height: 170px;
@@ -3474,41 +3517,49 @@ html[xmlns] .flexslider .slides {
   line-height: 170px;
   margin: 0;
 }
-.tour-list .days-trip {
+.days-trip {
   background-color: #fed594;
   width: 50%;
   position: absolute;
   left: 0;
   bottom: 0;
-  padding: 10px 0;
+  padding: 11px 0;
 }
-.tour-list .days-trip .ico-time {
+.days-trip .ico-time {
   display: block;
-  margin: 0 auto 5px;
+  margin: 8px auto 4px;
 }
-.tour-list .days-trip label {
+.days-trip label {
   font-size: 11px;
   font-family: "Gotham Black";
+  color: #8f3000;
 }
-.tour-list .days-trip .count {
+.days-trip .count {
   font-size: 14px;
   color: #393030;
+  font-family: "Gotham Black";
 }
-.tour-list .pricing {
+.pricing {
   background-color: #ffca77;
   width: 50%;
   position: absolute;
   right: 0;
   bottom: 0;
-  padding: 12px 0 11px;
+  padding: 22px 0 11px;
 }
-.tour-list .pricing .currency,
-.tour-list .pricing .price {
+.pricing .currency,
+.pricing .price {
+  font-family: "Gotham Black";
   color: #393030;
   font-size: 20px;
 }
-.tour-list .pricing .currency {
+.pricing .currency {
   font-size: 14px;
+}
+.pricing label {
+  font-size: 11px;
+  margin-bottom: 3px;
+  color: #8f3000;
 }
 .tour-list .rollover {
   z-index: 5;
@@ -3652,5 +3703,281 @@ html[xmlns] .flexslider .slides {
   -o-transform: translateX(0);
   -ms-transform: translateX(0);
   transform: translateX(0);
+}
+.featured-tour-detail .feature-image img {
+  width: 960px;
+  max-width: 100%;
+  height: 440px;
+}
+.featured-tour-detail .feature-image .info {
+  bottom: 0;
+  right: 0;
+  width: 222px;
+}
+.tour-detail-page .first-col {
+  width: 300px;
+}
+.tour-detail-page .second-col {
+  width: 620px;
+}
+.tour-detail-page .feature-summary {
+  padding: 40px;
+  margin-top: 35px;
+  background-color: #f4f4f4;
+  border-top: 1px solid #e0ded4;
+  border-bottom: 1px solid #e0ded4;
+}
+.tour-detail-page .feature-summary .title-summary {
+  font-family: "Gotham Rounded";
+  font-size: 30px;
+  padding-right: 30px;
+}
+.tour-detail-page .feature-summary .summary-text {
+  line-height: 24px;
+  font-size: 12px;
+  font-family: "Gotham Book";
+}
+.tour-detail-page .feature-summary .cities span {
+  display: inline-block;
+  margin-bottom: 8px;
+  padding: 0 8px;
+  border-right: 1px solid #c6c6c6;
+  line-height: 12px;
+}
+.tour-detail-page .nav-go-to {
+  border-bottom: 1px solid #e0ded4;
+  background: #fff;
+}
+.tour-detail-page .nav-go-to.fixed {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
+.tour-detail-page .nav-go-to li {
+  float: left;
+}
+.tour-detail-page .nav-go-to li > a,
+.tour-detail-page .nav-go-to li > span {
+  padding: 17px 20px;
+  height: 50px;
+  display: block;
+  font-family: "Gotham Black";
+  color: #000;
+  border-right: 1px solid #e0ded4;
+}
+.tour-detail-page .nav-go-to li > a.current,
+.tour-detail-page .nav-go-to li > span.current {
+  background-color: #f4f4f4;
+}
+.tour-detail-page .nav-go-to li > a:hover,
+.tour-detail-page .nav-go-to li > span:hover {
+  color: #4d4d4d;
+}
+.tour-detail-page .nav-go-to li > span {
+  padding-left: 0;
+  color: #8c8c8c;
+}
+.tour-detail-page .itenary-plan {
+  margin-top: 50px;
+}
+.tour-detail-page .itenary-plan .day {
+  padding: 0 0 30px 0;
+  margin: 0 0 30px 0;
+  border-bottom: 1px solid #e0ded4;
+}
+.tour-detail-page .itenary-plan .day .figure {
+  height: 250px;
+  width: 350px;
+}
+.tour-detail-page .itenary-plan .day .figure img {
+  width: 100%;
+  height: 100%;
+}
+.tour-detail-page .itenary-plan h5 {
+  font-size: 30px;
+  color: #393030;
+}
+.tour-detail-page .itenary-plan .info-itenary {
+  width: 540px;
+  min-height: 220px;
+  height: 220px;
+  height: auto !important;
+  padding-bottom: 30px;
+}
+.tour-detail-page .itenary-plan .tips {
+  line-height: 24px;
+  margin-top: 25px;
+}
+.tour-detail-page .itenary-plan .acomodation {
+  bottom: -5px;
+  left: 0;
+}
+.tour-detail-page .itenary-plan .acomodation span {
+  margin-top: 2px;
+}
+.tour-detail-page .section-title {
+  font-size: 30px;
+  color: #4c4c4c;
+}
+.tour-detail-page .table > tbody > tr > td {
+  padding-right: 25px;
+  padding-left: 25px;
+  line-height: 37px;
+}
+.tour-detail-page .table > tbody > tr > td strong {
+  font-family: "Gotham Black";
+}
+.tour-detail-page .book-and-availability .book-item {
+  -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 0px 4px 1px rgba(216, 216, 216, 0.5);
+  box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 0px 4px 1px rgba(216, 216, 216, 0.5);
+  margin-bottom: 12px;
+}
+.tour-detail-page .book-and-availability .book-item .column {
+  display: block;
+  float: left;
+  position: relative;
+  color: #000;
+  height: 80px;
+  padding-top: 25px;
+  font-size: 13px;
+}
+.tour-detail-page .book-and-availability .book-item .column strong,
+.tour-detail-page .book-and-availability .book-item .column label {
+  font-family: "Gotham Black";
+}
+.tour-detail-page .book-and-availability .book-item .column label {
+  color: #888888;
+  font-size: 11px;
+  margin-bottom: 0;
+}
+.tour-detail-page .book-and-availability .book-item .column-1 {
+  width: 438px;
+}
+.tour-detail-page .book-and-availability .book-item .column .arrow {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 204px;
+  background: url(../img/arrow-thin-medium.png) no-repeat center 0;
+  width: 26px;
+  height: 80px;
+}
+.tour-detail-page .book-and-availability .book-item .column .departure {
+  width: 205px;
+  padding-left: 57px;
+}
+.tour-detail-page .book-and-availability .book-item .column .departure .ico {
+  position: absolute;
+  left: 20px;
+  top: 13px;
+}
+.tour-detail-page .book-and-availability .book-item .column .return {
+  width: 203px;
+  padding-left: 50px;
+}
+.tour-detail-page .book-and-availability .book-item .column .return .ico {
+  position: absolute;
+  left: 20px;
+  top: 8px;
+}
+.tour-detail-page .book-and-availability .book-item .column-2 {
+  padding-left: 25px;
+  width: 175px;
+  border-left: 1px solid #d8d8d8;
+}
+.tour-detail-page .book-and-availability .book-item .column-3 {
+  padding-left: 25px;
+  width: 172px;
+  border-left: 1px solid #d8d8d8;
+  background-color: #f8f8f8;
+}
+.tour-detail-page .book-and-availability .book-item .column-4,
+.tour-detail-page .book-and-availability .book-item .column-yellow {
+  width: 155px;
+  text-align: center;
+  background-color: #158ea3;
+  padding: 0;
+  line-height: 80px;
+}
+.tour-detail-page .book-and-availability .book-item .column-4 a,
+.tour-detail-page .book-and-availability .book-item .column-yellow a {
+  color: #fff;
+}
+.tour-detail-page .book-and-availability .book-item .column-yellow {
+  background-color: #fcbc56;
+}
+.tour-detail-page .book-and-availability .book-item .column-own {
+  width: 785px;
+  line-height: 80px;
+  padding-top: 0;
+  padding-left: 70px;
+}
+.tour-detail-page .book-and-availability .book-item .column-own .ico.ico-idea {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+}
+.tour-detail-page .visa-doc .type-block {
+  -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 0px 4px 1px rgba(216, 216, 216, 0.5);
+  box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 0px 4px 1px rgba(216, 216, 216, 0.5);
+  color: #000;
+  font-size: 13px;
+}
+.tour-detail-page .visa-doc .type-block .wrapper-md {
+  height: 80px;
+}
+.tour-detail-page .visa-doc .type-block .bg-gray {
+  border-left: 1px solid #d8d8d8;
+  background-color: #f8f8f8;
+}
+.tour-detail-page .visa-doc label {
+  font-family: "Gotham Black";
+  color: #888888;
+  font-size: 11px;
+  margin-bottom: 0;
+}
+.tour-detail-page .visa-doc-info ul {
+  line-height: 20px;
+  list-style-image: url(../img/green-cilcle.png);
+  padding-left: 21px;
+}
+.tour-detail-page .visa-doc-info ul > li ul {
+  list-style-image: none;
+  list-style-type: disc;
+}
+.tour-detail-page .visa-doc-info ul > li div {
+  padding-left: 7px;
+}
+.tour-detail-page .info-harga {
+  background-color: #fcbc56;
+}
+.tour-detail-page .info-harga h6 {
+  font-family: "Gotham Black";
+  padding-left: 10px;
+}
+.tour-detail-page .info-harga .include,
+.tour-detail-page .info-harga .exclude {
+  line-height: 24px;
+  padding: 50px 40px 50px 75px;
+  width: 50%;
+  float: left;
+}
+.tour-detail-page .info-harga .include ol,
+.tour-detail-page .info-harga .exclude ol {
+  padding: 0;
+}
+.tour-detail-page .info-harga .include ol li,
+.tour-detail-page .info-harga .exclude ol li {
+  font-family: "Gotham Black";
+}
+.tour-detail-page .info-harga .include ol li p,
+.tour-detail-page .info-harga .exclude ol li p {
+  font-family: "Gotham Book";
+  margin-left: 10px;
+}
+.tour-detail-page .info-harga .include {
+  border-right: 1px dashed #db9a34;
 }
 /*# sourceMappingURL=sapta-tour.css.map */
