--- a/app/less/helper/buttons.less
+++ b/app/less/helper/buttons.less
@@ -1,4 +1,12 @@
 .btn {
+  border-radius: 0;
+  font-family: "Gotham Black";
+  letter-spacing: 1px;
+
+  &.book-now {
+    font-size: 18px;
+    line-height: 24px;
+  }
 
   &-s-xs {
     min-width: 90px
@@ -13,7 +21,9 @@
     min-width: 150px
   }
   &-s-xl {
-    min-width: 200px
+    min-width: 200px;
+    padding-top: 12px;
+    padding-bottom: 12px;
   }
   &-s-fluid {
     width: 100%
