--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -97,5 +97,29 @@
       height: 16px;
       background-position: -160px -16px;
     }
+
+    &-food {
+      width: 13px;
+      height: 20px;
+      background-position: -230px -12px;
+    }
+
+    &-departure {
+      width: 22px;
+      height: 11px;
+      background-position: -355px -20px;
+    }
+
+    &-retrun {
+      width: 19px;
+      height: 15px;
+      background-position: -393px -15px;
+    }
+
+    &-idea {
+      width: 24px;
+      height: 22px;
+      background-position: -429px -175px;
+    }
   }
 }
