--- a/app/jade/include/mixin.jade
+++ b/app/jade/include/mixin.jade
@@ -3,7 +3,7 @@ mixin destinationInfo(region, destinantion, price)
     span.block.info-detail.overlay.text-u-c
       span.block.destination-type #{region}
       span.block.location.package.block #{destinantion}
-      span.block.pricing
+      span.block.pricing.tour
         span From
         span.currency  USD
         span.price  #{price}
