--- a/app/jade/tour-detail.jade
+++ b/app/jade/tour-detail.jade
@@ -15,12 +15,12 @@ block main
           img(src="img/destinations/Paris-02.jpg", alt="")
 
           .info.bg-white.pos-abt
-            a.days-trip.text-center(href="tour-detail.html")
+            a.days-trip.tour.text-center(href="tour-detail.html")
               i.ico.ico-time
               span.count 10
               label.text-u-c.text-sm DAYS
 
-            a.pricing.text-center(href="tour-detail.html")
+            a.pricing.tour.text-center(href="tour-detail.html")
               label.block.text-u-c.text-light FROM
               span.currency  $
               span.price 3500
