--- a/app/less/web/tours.less
+++ b/app/less/web/tours.less
@@ -19,7 +19,7 @@
   }
 }
 
-.days-trip  {
+.days-trip.tour {
   background-color: #fed594;
   width: 50%;
   position: absolute;
@@ -45,7 +45,7 @@
   }
 }
 
-.pricing {
+.pricing.tour {
   background-color: #ffca77;
   width: 50%;
   position: absolute;
