fixing loaded image

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -48,7 +48,7 @@ block main
         .popular-destinations
           .col-md-6
             .big-item.row.b-r-white
-              img(src="img/destinations/turkey.jpg", alt="")
+              img(src="img/destinations/Turkey.jpg", alt="")
               a.info.yellow-box.wrapper-md(href="#")
                 span.block.region.text-u-c MIddle East
                 span.block.m-t-xs.text-u-c.destination Turkey Adventure
@@ -62,7 +62,7 @@ block main
           .col-md-6
             .row.square.b-b-white
               a.pull-left.item.b-r-white(href="#")
-                img(src="img/destinations/japan.jpg", alt="")
+                img(src="img/destinations/Japan.jpg", alt="")
                 mixin destinationInfo('Asia', 'Japan Essentials', '2000')
 
               a.pull-right.item(href="#")
@@ -71,7 +71,7 @@ block main
 
             .row.square
               a.pull-left.b-r-white.item(href="#")
-                img(src="img/destinations/france.jpg", alt="")
+                img(src="img/destinations/Trance.jpg", alt="")
                 mixin destinationInfo('Europe', 'French Riviera', '2000')
 
               a.pull-right.item(href="#")
