--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -71,7 +71,7 @@ block main
 
             .row.square
               a.pull-left.b-r-white.item(href="#")
-                img(src="img/destinations/Trance.jpg", alt="")
+                img(src="img/destinations/France.jpg", alt="")
                 mixin destinationInfo('Europe', 'French Riviera', '2000')
 
               a.pull-right.item(href="#")
