remove unused file and fixing typo

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -163,7 +163,7 @@ block main
 
             .row.square
               a.pull-left.b-r-white.item(href="#")
-                img(src="img/destinations/france.jpg", alt="")
+                img(src="img/destinations/France.jpg", alt="")
                 mixin destinationInfo('Europe', 'French Riviera', '2000')
               a.pull-right.item(href="#")
                 img(src="img/destinations/Paris.jpg", alt="")
