--- a/app/less/web/fonts.less
+++ b/app/less/web/fonts.less
@@ -5,8 +5,6 @@
     url('../fonts/gothamrnd-light.woff') format('woff'),
     url('../fonts/gothamrnd-light.ttf') format('truetype'),
     url('../fonts/gothamrnd-light.svg') format('svg');
-  font-weight: normal;
-  font-style: normal;
 }
 
 @font-face {
@@ -16,8 +14,6 @@
     url('../fonts/gotham-black-webfont.woff') format('woff'),
     url('../fonts/gotham-black-webfont.ttf') format('truetype'),
     url('../fonts/gotham-black-webfont.svg') format('svg');
-  font-weight: normal;
-  font-style: normal;
 }
 
 @font-face {
@@ -27,8 +23,14 @@
     url('../fonts/gotham.woff') format('woff'),
     url('../fonts/gotham.ttf') format('truetype'),
     url('../fonts/gotham.svg') format('svg');
-  font-weight: normal;
-  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Gotham Book';
+  src: url('../fonts/gotham-book-webfont.eot');
+  src: url('../fonts/gotham-book-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/gotham-book-webfont.ttf') format('truetype'),
+    url('../fonts/gotham-book-webfont.svg') format('svg');
 }
 
 @font-face {
@@ -38,17 +40,13 @@
     url('../fonts/Aller_Bd.woff') format('woff'),
     url('../fonts/Aller_Bd.ttf') format('truetype'),
     url('../fonts/Aller_Bd.svg') format('svg');
-  font-weight: normal;
-  font-style: normal;
 }
 
 @font-face {
-  font-family: 'Gotham Book';
-  src: url('../fonts/gotham-book-webfont.eot');
-  src: url('../fonts/gotham-book-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/gotham-book-webfont.woff') format('woff'),
-    url('../fonts/gotham-book-webfont.ttf') format('truetype'),
-    url('../fonts/gotham-book-webfont.svg') format('svg');
-  font-weight: normal;
-  font-style: normal;
+  font-family: 'Aller Display';
+  src: url('../fonts/AllerDisplay.eot');
+  src: url('../fonts/AllerDisplay.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/AllerDisplay.woff') format('woff'),
+    url('../fonts/AllerDisplay.ttf') format('truetype'),
+    url('../fonts/AllerDisplay.svg') format('svg');
 }
