--- a/app/css/sapta-tour.css
+++ b/app/css/sapta-tour.css
@@ -78,8 +78,7 @@
 }
 .fa-spin {
   -webkit-animation: fa-spin 2s infinite linear;
-  -o-animation: fa-spin 2s infinite linear;
-     animation: fa-spin 2s infinite linear;
+  animation: fa-spin 2s infinite linear;
 }
 @-webkit-keyframes fa-spin {
   0% {
@@ -91,72 +90,52 @@
     transform: rotate(359deg);
   }
 }
-@-o-keyframes fa-spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-       transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(359deg);
-    -o-transform: rotate(359deg);
-       transform: rotate(359deg);
-  }
-}
 @keyframes fa-spin {
   0% {
     -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-       transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
     -webkit-transform: rotate(359deg);
-    -o-transform: rotate(359deg);
-       transform: rotate(359deg);
+    transform: rotate(359deg);
   }
 }
 .fa-rotate-90 {
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
   -webkit-transform: rotate(90deg);
   -ms-transform: rotate(90deg);
-  -o-transform: rotate(90deg);
-     transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 .fa-rotate-180 {
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
   -webkit-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
-  -o-transform: rotate(180deg);
-     transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 .fa-rotate-270 {
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
   -webkit-transform: rotate(270deg);
   -ms-transform: rotate(270deg);
-  -o-transform: rotate(270deg);
-     transform: rotate(270deg);
+  transform: rotate(270deg);
 }
 .fa-flip-horizontal {
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=0, mirror=1);
   -webkit-transform: scale(-1, 1);
   -ms-transform: scale(-1, 1);
-  -o-transform: scale(-1, 1);
-     transform: scale(-1, 1);
+  transform: scale(-1, 1);
 }
 .fa-flip-vertical {
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2, mirror=1);
   -webkit-transform: scale(1, -1);
   -ms-transform: scale(1, -1);
-  -o-transform: scale(1, -1);
-     transform: scale(1, -1);
+  transform: scale(1, -1);
 }
 :root .fa-rotate-90,
 :root .fa-rotate-180,
 :root .fa-rotate-270,
 :root .fa-flip-horizontal,
 :root .fa-flip-vertical {
-  -webkit-filter: none;
-          filter: none;
+  filter: none;
 }
 .fa-stack {
   position: relative;
@@ -1904,12 +1883,10 @@ a.text-orange {
   display: inline-block !important;
 }
 .box-shadow {
-  -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(0, 0, 0, 0.05);
-          box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(0, 0, 0, 0.05);
 }
 .box-shadow-none {
-  -webkit-box-shadow: none !important;
-          box-shadow: none !important;
+  box-shadow: none !important;
 }
 .wrapper-xxs {
   padding: 4px 6px;
@@ -2391,6 +2368,8 @@ a.text-orange {
   -o-transition: opacity 0.1s ease-in-out;
   transition: opacity 0.1s ease-in-out;
   -webkit-transition: all opacity 0.1s ease-in-out ease;
+  -moz-transition: all opacity 0.1s ease-in-out ease;
+  -ms-transition: all opacity 0.1s ease-in-out ease;
   -o-transition: all opacity 0.1s ease-in-out ease;
   transition: all opacity 0.1s ease-in-out ease;
 }
@@ -2491,6 +2470,8 @@ fieldset[disabled] .i-checks input + i:before {
   -o-transition: all 0.2s ease-in-out 0.1s;
   transition: all 0.2s ease-in-out 0.1s;
   -webkit-transition: all all 0.2s ease-in-out 0.1s ease;
+  -moz-transition: all all 0.2s ease-in-out 0.1s ease;
+  -ms-transition: all all 0.2s ease-in-out 0.1s ease;
   -o-transition: all all 0.2s ease-in-out 0.1s ease;
   transition: all all 0.2s ease-in-out 0.1s ease;
 }
@@ -2708,7 +2689,6 @@ fieldset[disabled] .form-control.bg-white-only {
   border-radius: 4px;
   background-image: -webkit-linear-gradient(top, #f4f4f4 0%, #ffffff 100%);
   background-image: -o-linear-gradient(top, #f4f4f4 0%, #ffffff 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#f4f4f4), to(#ffffff));
   background-image: linear-gradient(to bottom, #f4f4f4 0%, #ffffff 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff4f4f4', endColorstr='#ffffffff', GradientType=0);
@@ -2810,8 +2790,11 @@ html[xmlns] .flexslider .slides {
   border: 0;
   position: relative;
   zoom: 1;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
   border-radius: 0;
   -webkit-box-shadow: '' 0 1px 4px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: '' 0 1px 4px rgba(0, 0, 0, 0.2);
   -o-box-shadow: '' 0 1px 4px rgba(0, 0, 0, 0.2);
   box-shadow: '' 0 1px 4px rgba(0, 0, 0, 0.2);
 }
@@ -2824,6 +2807,8 @@ html[xmlns] .flexslider .slides {
 .flex-viewport {
   max-height: 2000px;
   -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -ms-transition: all 1s ease;
   -o-transition: all 1s ease;
   transition: all 1s ease;
 }
@@ -2851,6 +2836,8 @@ html[xmlns] .flexslider .slides {
   color: rgba(0, 0, 0, 0.8);
   text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
   -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
@@ -2937,8 +2924,11 @@ html[xmlns] .flexslider .slides {
   cursor: pointer;
   text-indent: -9999px;
   -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
   -o-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
   box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
   border-radius: 20px;
 }
 .flex-control-paging li a:hover {
@@ -2967,6 +2957,8 @@ html[xmlns] .flexslider .slides {
   opacity: .7;
   cursor: pointer;
   -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -ms-transition: all 1s ease;
   -o-transition: all 1s ease;
   transition: all 1s ease;
 }
@@ -3005,8 +2997,9 @@ html[xmlns] .flexslider .slides {
 .nav.main-menu > li > a {
   color: #fff;
   text-transform: uppercase;
-  font-family: "Aller";
+  font-family: "Aller Display", "Aller";
   text-align: center;
+  letter-spacing: 0.8px;
   padding: 14px 26px 0 26px;
   height: 70px;
   font-size: 12px;
@@ -3057,8 +3050,26 @@ html[xmlns] .flexslider .slides {
 .nav.navbar-right > li > a:hover {
   background: none;
 }
+.nav.navbar-nav > li {
+  position: static;
+}
+.nav > li .form {
+  display: none;
+  -webkit-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  -webkit-transition: all all 0.5s ease-in-out ease;
+  -moz-transition: all all 0.5s ease-in-out ease;
+  -ms-transition: all all 0.5s ease-in-out ease;
+  -o-transition: all all 0.5s ease-in-out ease;
+  transition: all all 0.5s ease-in-out ease;
+}
+.nav > li:hover .form {
+  display: block;
+}
 .navbar {
   position: relative;
+  z-index: 1001;
   margin-bottom: 0;
   background-color: #158ea3;
   border-radius: 0;
@@ -3070,6 +3081,139 @@ html[xmlns] .flexslider .slides {
   padding: 7px 20px 7px 10px;
   height: auto !important;
   display: block;
+}
+.tour-form.inline-text,
+.flight-form.inline-text {
+  background-color: #007589;
+  height: 220px;
+  width: 100%;
+  left: 0;
+  z-index: 1000;
+}
+.tour-form.inline-text > .container,
+.flight-form.inline-text > .container {
+  padding-top: 23px;
+  background-image: url(../img/bg-logos.png);
+  background-repeat: no-repeat;
+  background-position: 745px 25px;
+}
+.tour-form.inline-text .left,
+.flight-form.inline-text .left,
+.tour-form.inline-text .right,
+.flight-form.inline-text .right {
+  width: 595px;
+  float: left;
+  border-right: 1px solid #006475;
+  height: 165px;
+}
+.tour-form.inline-text .left label,
+.flight-form.inline-text .left label,
+.tour-form.inline-text .right label,
+.flight-form.inline-text .right label {
+  color: #01414c;
+}
+.tour-form.inline-text .left,
+.flight-form.inline-text .left {
+  padding-right: 75px;
+}
+.tour-form.inline-text .left div span,
+.flight-form.inline-text .left div span {
+  line-height: 27px;
+  margin: 0 5px 14px 5px;
+  font-size: 21px;
+  color: #fff;
+  display: block;
+  float: left;
+}
+.tour-form.inline-text .left div span:first-child,
+.flight-form.inline-text .left div span:first-child {
+  margin-left: 0;
+}
+.tour-form.inline-text .left input[type="text"],
+.flight-form.inline-text .left input[type="text"] {
+  font-size: 21px;
+  color: #fcaf56;
+  margin: 0 0 14px 0;
+  background: none;
+  padding: 0;
+  border: none;
+  border-bottom: 2px dashed #feaf55;
+  line-height: 25px;
+  display: block;
+  float: left;
+}
+.tour-form.inline-text .left input[type="text"]:hover,
+.flight-form.inline-text .left input[type="text"]:hover,
+.tour-form.inline-text .left input[type="text"]:focus,
+.flight-form.inline-text .left input[type="text"]:focus,
+.tour-form.inline-text .left input[type="text"]:active,
+.flight-form.inline-text .left input[type="text"]:active {
+  outline: 0;
+}
+.tour-form.inline-text .right,
+.flight-form.inline-text .right {
+  border-right: 0;
+  border-left: 1px solid #268a9b;
+  width: 344px;
+  background: no-repeat center center;
+  padding-top: 59px;
+}
+.tour-form.inline-text .right .btn,
+.flight-form.inline-text .right .btn {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  font-size: 13px;
+}
+.tour-form.inline-text .right .btn.btn-submit,
+.flight-form.inline-text .right .btn.btn-submit {
+  background: #fcbc56;
+  color: #fff;
+  border: 1px solid rgba(252, 188, 86, 0.5);
+  -webkit-box-shadow: 0px 3px 0px 0px #cf8309, 0px 1px 2px rgba(252, 188, 86, 0.5);
+  box-shadow: 0px 3px 0px 0px #cf8309, 0px 1px 2px rgba(252, 188, 86, 0.5);
+  padding-left: 10px;
+  text-shadow: 0px 2px rgba(102, 51, 0, 0.3);
+  position: relative;
+  font-size: 11px;
+  line-height: 16px;
+}
+.tour-form.inline-text .right .btn.btn-submit:hover,
+.flight-form.inline-text .right .btn.btn-submit:hover {
+  text-shadow: none;
+}
+.tour-form.inline-text .right .btn.btn-submit:active,
+.flight-form.inline-text .right .btn.btn-submit:active {
+  -webkit-box-shadow: 0px 3px 0px 0px #fcbc56, 0px 1px 2px rgba(252, 188, 86, 0.5);
+  box-shadow: 0px 3px 0px 0px #fcbc56, 0px 1px 2px rgba(252, 188, 86, 0.5);
+}
+.tour-form.inline-text .right .btn.btn-submit:active span:after,
+.flight-form.inline-text .right .btn.btn-submit:active span:after {
+  height: 36px;
+}
+.tour-form.inline-text .right .btn.btn-submit span,
+.flight-form.inline-text .right .btn.btn-submit span {
+  position: relative;
+}
+.tour-form.inline-text .right .btn.btn-submit span:after,
+.flight-form.inline-text .right .btn.btn-submit span:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: -9px;
+  right: -10px;
+  height: 33px;
+  background: #e9ac4d;
+  width: 1px;
+}
+.flight-form.inline-text .right .btn {
+  letter-spacing: .5px;
+}
+.flight-form.inline-text .right .btn.btn-submit {
+  margin-left: 18px !important;
+}
+.flight-form.inline-text .right .btn.btn-white.pull-right {
+  padding-left: 5px;
+  padding-right: 5px;
 }
 .footer {
   padding: 47.5px 0;
@@ -3289,7 +3433,6 @@ html[xmlns] .flexslider .slides {
   color: #393030;
   background-image: -webkit-linear-gradient(top, #ffffff 5%, rgba(0, 0, 0, 0.08) 100%);
   background-image: -o-linear-gradient(top, #ffffff 5%, rgba(0, 0, 0, 0.08) 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(5%, #ffffff), to(rgba(0, 0, 0, 0.08)));
   background-image: linear-gradient(to bottom, #ffffff 5%, rgba(0, 0, 0, 0.08) 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#14000000', GradientType=0);
@@ -3578,6 +3721,7 @@ html[xmlns] .flexslider .slides {
   height: 358px;
   background-color: #fcbc56;
   -webkit-transform: translateX(-309px);
+  -moz-transform: translateX(-309px);
   -o-transform: translateX(-309px);
   -ms-transform: translateX(-309px);
   transform: translateX(-309px);
@@ -3585,6 +3729,8 @@ html[xmlns] .flexslider .slides {
   -o-transition: all 0.6s ease-in-out;
   transition: all 0.6s ease-in-out;
   -webkit-transition: all all 0.6s ease-in-out ease;
+  -moz-transition: all all 0.6s ease-in-out ease;
+  -ms-transition: all all 0.6s ease-in-out ease;
   -o-transition: all all 0.6s ease-in-out ease;
   transition: all all 0.6s ease-in-out ease;
 }
@@ -3689,6 +3835,7 @@ html[xmlns] .flexslider .slides {
 .tour-list .tour-item:nth-child(3n+1) .rollover {
   width: 298px;
   -webkit-transform: translateX(-308px);
+  -moz-transform: translateX(-308px);
   -o-transform: translateX(-308px);
   -ms-transform: translateX(-308px);
   transform: translateX(-308px);
@@ -3704,6 +3851,7 @@ html[xmlns] .flexslider .slides {
 }
 .tour-list .tour-item:hover .rollover {
   -webkit-transform: translateX(0);
+  -moz-transform: translateX(0);
   -o-transform: translateX(0);
   -ms-transform: translateX(0);
   transform: translateX(0);
