--- a/app/css/sapta-tour.css
+++ b/app/css/sapta-tour.css
@@ -3068,7 +3068,6 @@ html[xmlns] .flexslider .slides {
   display: block;
 }
 .navbar {
-  position: relative;
   z-index: 1001;
   margin-bottom: 0;
   background-color: #158ea3;
@@ -3676,6 +3675,7 @@ html[xmlns] .flexslider .slides {
   left: 0;
   bottom: 0;
   padding: 11px 0;
+  height: 79px;
 }
 .days-trip.tour .ico-time {
   display: block;
@@ -3694,6 +3694,7 @@ html[xmlns] .flexslider .slides {
 .pricing.tour {
   background-color: #ffca77;
   width: 50%;
+  height: 79px;
   position: absolute;
   right: 0;
   bottom: 0;
@@ -3715,10 +3716,10 @@ html[xmlns] .flexslider .slides {
 }
 .tour-list .rollover {
   z-index: 5;
-  top: 10px;
-  left: 10px;
+  top: 0;
+  left: 0;
   width: 299px;
-  height: 358px;
+  height: 349px;
   background-color: #fcbc56;
   -webkit-transform: translateX(-309px);
   -moz-transform: translateX(-309px);
@@ -3786,23 +3787,33 @@ html[xmlns] .flexslider .slides {
   border-right: 1px dashed #e5e5e5;
   border-bottom: 1px dashed #e5e5e5;
 }
+.tour-list .tour-item .pos-rlt.wrapping {
+  overflow: hidden;
+  background: #fff;
+}
 .tour-list .tour-item:nth-child(1) .dealinfo,
 .tour-list .tour-item:nth-child(2) .dealinfo,
 .tour-list .tour-item:nth-child(3) .dealinfo {
   position: absolute;
   top: 20px;
-  left: 10px;
+  left: 0;
   width: 220px;
   height: 260px;
   z-index: 1;
 }
+.tour-list .tour-item:nth-child(1) .rollover,
+.tour-list .tour-item:nth-child(2) .rollover,
+.tour-list .tour-item:nth-child(3) .rollover {
+  top: 10px;
+}
 .tour-list .tour-item:nth-child(1) {
   border: 1px dashed #e5e5e5;
   background: none;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .tour-list .tour-item:nth-child(1) figure {
   height: 440px;
-  margin: 10px;
 }
 .tour-list .tour-item:nth-child(2) {
   background: none;
@@ -4055,6 +4066,7 @@ html[xmlns] .flexslider .slides {
 }
 .tour-detail-page .book-and-availability .book-item .column-4 a,
 .tour-detail-page .book-and-availability .book-item .column-yellow a {
+  text-shadow: 1px 1px 0px #006678;
   color: #fff;
 }
 .tour-detail-page .book-and-availability .book-item .column-yellow {
@@ -4104,6 +4116,9 @@ html[xmlns] .flexslider .slides {
 }
 .tour-detail-page .info-harga {
   background-color: #fcbc56;
+  -moz-box-shadow: inset 0 0 20px #f28c05;
+  -webkit-box-shadow: inset 0 0 20px #f28c05;
+  box-shadow: inset 0 0 20px #f28c05;
 }
 .tour-detail-page .info-harga h6 {
   font-family: "Gotham Black";
