--- a/app/jade/include/header.jade
+++ b/app/jade/include/header.jade
@@ -1,4 +1,4 @@
-div.navbar(role='navigation')
+div.navbar.navbar-fixed-top(role='navigation')
   .container
     .navbar-header
       a.navbar-brand(href='index.html', title='TS Starter')
@@ -12,7 +12,7 @@ div.navbar(role='navigation')
 
           include ../form/tour
 
-        li.active
+        li
           a(href='#flights')
             i.ico.ico-flight
             span.block BOOK FLIGHTS
