--- a/app/jade/tours.jade
+++ b/app/jade/tours.jade
@@ -71,68 +71,80 @@ block main
       |  Please use the search bar on top to refine the results
 
     .tour-list.row
-      .tour-item.pos-rtl
-        figure
-          img(src="img/destinations/Russia.jpg", alt="")
+      .tour-item
+        .pos-rlt.wrapping
+          figure
+            img(src="img/destinations/Russia.jpg", alt="")
 
-        mixin dealInfo('Europe', 'Russia Scandinavia', 7, 400)
+          mixin dealInfo('Europe', 'Russia Scandinavia', 7, 400)
 
-      .tour-item.pos-rtl.col-md-6
-        figure
-          img(src="img/destinations/Korea.jpg", alt="")
+      .tour-item.col-md-6
+        .pos-rlt.wrapping
+          figure
+            img(src="img/destinations/Korea.jpg", alt="")
 
-        mixin dealInfo('Asia', 'KOrea Winter Sky Resort', 7, 1000)
+          mixin dealInfo('Asia', 'KOrea Winter Sky Resort', 7, 1000)
 
-      .tour-item.pos-rtl.col-md-6
-        figure
-          img(src="img/destinations/New-Zealand.jpg", alt="")
+      .tour-item.col-md-6
+        .pos-rlt.wrapping
+          figure
+            img(src="img/destinations/New-Zealand.jpg", alt="")
 
-        mixin dealInfo('Oceania', 'New Zealand Hobbiton', 7, 3000)
+          mixin dealInfo('Oceania', 'New Zealand Hobbiton', 7, 3000)
 
-      .tour-item.pos-rtl.col-md-4
-        figure
-          img(src="img/destinations/Kyoto.jpg", alt="")
-        mixin dealInfo('Asia', 'Kyoto’s hidden Gems', 7, 2500)
+      .tour-item.col-md-4
+        .pos-rlt.wrapping
+          figure
+            img(src="img/destinations/Kyoto.jpg", alt="")
+          mixin dealInfo('Asia', 'Kyoto’s hidden Gems', 7, 2500)
 
-      .tour-item.pos-rtl.col-md-4
-        figure
-          img(src="img/destinations/Nice.jpg", alt="")
-        mixin dealInfo('Europe', 'Russia Scandinavia', 7, 400)
+      .tour-item.col-md-4
+        .pos-rlt.wrapping
+          figure
+            img(src="img/destinations/Nice.jpg", alt="")
+          mixin dealInfo('Europe', 'Russia Scandinavia', 7, 400)
 
-      .tour-item.pos-rtl.col-md-4
-        figure
-          img(src="img/destinations/Singapore.jpg", alt="")
-        mixin dealInfo('Asia', 'Manina Bay Singapore', 7, 400)
+      .tour-item.col-md-4
+        .pos-rlt.wrapping
+          figure
+            img(src="img/destinations/Singapore.jpg", alt="")
+          mixin dealInfo('Asia', 'Manina Bay Singapore', 7, 400)
 
-      .tour-item.pos-rtl.col-md-4
-        figure
-          img(src="img/destinations/Eastern-Europe.jpg", alt="")
-        mixin dealInfo('Europe', 'Eastern Europe', 7, 400)
+      .tour-item.col-md-4
+        .pos-rlt.wrapping
+          figure
+            img(src="img/destinations/Eastern-Europe.jpg", alt="")
+          mixin dealInfo('Europe', 'Eastern Europe', 7, 400)
 
-      .tour-item.pos-rtl.col-md-4
-        figure
-          img(src="img/destinations/Jiuzhaigou.jpg", alt="")
-        mixin dealInfo('Asia', 'Beautiful Jiu ZHai Gou and Beyond', 7, 400)
+      .tour-item.col-md-4
+        .pos-rlt.wrapping
+          figure
+            img(src="img/destinations/Jiuzhaigou.jpg", alt="")
+          mixin dealInfo('Asia', 'Beautiful Jiu ZHai Gou and Beyond', 7, 400)
 
-      .tour-item.pos-rtl.col-md-4
-        figure
-          img(src="img/destinations/Sky-Lantern-Festival-Taiwan.jpg", alt="")
-        mixin dealInfo('Europe', 'Russia Scandinavia', 7, 400)
+      .tour-item.col-md-4
+        .pos-rlt.wrapping
+          figure
+            img(src="img/destinations/Sky-Lantern-Festival-Taiwan.jpg", alt="")
+          mixin dealInfo('Europe', 'Russia Scandinavia', 7, 400)
 
-      .tour-item.pos-rtl.col-md-4
-        figure
-          img(src="img/destinations/Maldives.jpg", alt="")
-        mixin dealInfo('Europe', 'Russia Scandinavia', 7, 400)
+      .tour-item.col-md-4
+        .pos-rlt.wrapping
+          figure
+            img(src="img/destinations/Maldives.jpg", alt="")
+          mixin dealInfo('Europe', 'Russia Scandinavia', 7, 400)
 
-      .tour-item.pos-rtl.col-md-4
-        figure
-          img(src="img/destinations/Hong-Kong_vew_sunset.jpg", alt="")
-        mixin dealInfo('Europe', 'Russia Scandinavia', 7, 400)
+      .tour-item.col-md-4
+        .pos-rlt.wrapping
+          figure
+            img(src="img/destinations/Hong-Kong_vew_sunset.jpg", alt="")
+          mixin dealInfo('Europe', 'Russia Scandinavia', 7, 400)
 
-      .tour-item.pos-rtl.col-md-4
-        figure
-          img(src="img/destinations/Bangkok02.jpg", alt="")
-        mixin dealInfo('Europe', 'Russia Scandinavia', 7, 400)
+      .tour-item.col-md-4
+        .pos-rlt.wrapping
+          figure
+            img(src="img/destinations/Bangkok02.jpg", alt="")
+          mixin dealInfo('Europe', 'Russia Scandinavia', 7, 400)
 
   .wrapper-lg.container.text-center.m-t-lg.m-b-lg
     a.btn.btn-white.m-auto(href="#")
