--- a/app/less/web/tour-detail.less
+++ b/app/less/web/tour-detail.less
@@ -244,6 +244,7 @@
           line-height: 80px;
 
           a {
+            text-shadow: 1px 1px 0px rgba(0, 102, 120, 1);
             color: #fff;
           }
         }
@@ -315,6 +316,9 @@
 
   .info-harga {
     background-color: #fcbc56;
+    -moz-box-shadow:    inset 0 0 20px darken(#fbae49, 15%);
+    -webkit-box-shadow: inset 0 0 20px darken(#fbae49, 15%);
+    box-shadow:         inset 0 0 20px darken(#fbae49, 15%);
 
     h6 {
       font-family: "Gotham Black";
