fixing container page for sticky bar and booking page

--- a/app/jade/form/flight.jade
+++ b/app/jade/form/flight.jade
@@ -21,9 +21,9 @@
         span  class
 
     .right
-      a.pull-left.btn-submit.btn.btn-white.m-auto.m-l-lg(href="#")
+      a.pull-left.btn-submit.btn.btn-white.m-auto.m-l-lg(href="flights.html")
         span.inline.m-r-md.m-l-xs.text-u-c Find Flights
         i.fa.fa-angle-right
 
-      a.pull-right.btn.btn-white.m-l-md(href="#")
+      a.pull-right.btn.btn-white.m-l-md(href="flights.html")
         span.block.m-r-sm.m-l-sm Why Book With Us
