--- a/app/jade/form/tour.jade
+++ b/app/jade/form/tour.jade
@@ -19,9 +19,9 @@
         input(type="text", value="price low to high", name="price", size="5")
 
     .right
-      a.pull-left.btn-submit.btn.btn-white.m-auto.m-l-lg(href="#")
+      a.pull-left.btn-submit.btn.btn-white.m-auto.m-l-lg(href="tours.html")
         span.inline.m-r-md.m-l-xs.text-u-c Find Tours
         i.fa.fa-angle-right
 
-      a.pull-right.btn.btn-white.m-r-md(href="#")
+      a.pull-right.btn.btn-white.m-r-md(href="tours.html")
         span.text-sm.block.m-l-sm See All Tours
