--- a/app/jade/tour-detail.jade
+++ b/app/jade/tour-detail.jade
@@ -4,7 +4,7 @@ include include/mixin
 
 block main
 
-  .tour-detail-page
+  .tour-detail-page.p-t-70
     .container.m-t-xl
       label.wrapper-lg.pad-b-n.text-light.text-u-c.block.text-center.text-yellow Europe
       h2.m-t-xs.head-title.text-center.text-u-c The Best of West Europe
