--- a/app/jade/tour/book-and-availability.jade
+++ b/app/jade/tour/book-and-availability.jade
@@ -31,7 +31,7 @@
         span.block USD $3000
 
       .column.column-4
-        a.block.text-u-c(href="#") Booking Inquiry
+        a.block.text-u-c(href="booking.html") Booking Inquiry
 
       .clearfix
 
@@ -63,7 +63,7 @@
         span.block USD $3000
 
       .column.column-4
-        a.block.text-u-c(href="#") Booking Inquiry
+        a.block.text-u-c(href="booking.html") Booking Inquiry
 
       .clearfix
 
@@ -95,7 +95,7 @@
         span.block USD $3000
 
       .column.column-4
-        a.block.text-u-c(href="#") Booking Inquiry
+        a.block.text-u-c(href="booking.html") Booking Inquiry
 
       .clearfix
 
@@ -104,6 +104,6 @@
         i.ico.ico-idea
         span.block Have your own preferences? Let us know what dates and airline are best for you.
       .column.column-yellow
-        a.block.text-u-c(href="#") Booking Inquiry
+        a.block.text-u-c(href="booking.html") Booking Inquiry
       .clearfix
 
