--- a/app/jade/tours.jade
+++ b/app/jade/tours.jade
@@ -54,7 +54,7 @@ mixin dealInfo(region, destination, day, price)
 
 block main
 
-  .tours-page
+  .tours-page.p-t-70
     .banner
       h3.text-white.text-center International Destinations
 
