--- a/app/less/helper/app.utilities.less
+++ b/app/less/helper/app.utilities.less
@@ -195,6 +195,7 @@ a.text-orange {color: #ef9630}
 .m-l-n-lg{margin-left: -30px}
 .m-l-n-xl{margin-left: -40px}
 
+.p-t-70 {padding-top: 70px;}
 .m-t-none{margin-top:0}
 .m-t-xxs{margin-top: 1px;}
 .m-t-xs{margin-top: 5px;}
