--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -121,5 +121,42 @@
       height: 22px;
       background-position: -429px -175px;
     }
+
+    &-switch {
+      width: 20px;
+      height: 21px;
+      background: url(../img/ico-switch.png) no-repeat;
+      cursor: pointer;
+    }
+
+    &-adult {
+      width: 11px;
+      height: 23px;
+      background-position: -264px -9px;
+    }
+
+    &-child {
+      width: 11px;
+      height: 26px;
+      background-position: -292px -5px;
+    }
+
+    &-baby {
+      width: 15px;
+      height: 11px;
+      background-position: -323px -19px;
+    }
+
+    &-right {
+      height: 24px;
+      width: 24px;
+      background: url(../img/arrow-right.png) no-repeat 0 0;
+    }
+
+    &-left {
+      height: 24px;
+      width: 24px;
+      background: url(../img/arrow-left.png) no-repeat 0 0;
+    }
   }
 }
