--- a/app/less/web/tour-detail.less
+++ b/app/less/web/tour-detail.less
@@ -141,7 +141,6 @@
   .section-title {
     font-size: 30px;
     color: #4c4c4c;
-
   }
 
   .table {
@@ -244,13 +243,17 @@
           line-height: 80px;
 
           a {
-            text-shadow: 1px 1px 0px rgba(0, 102, 120, 1);
+            text-shadow: 1px 2px 0px rgba(0, 102, 120, 1);
             color: #fff;
           }
         }
 
         &-yellow {
           background-color: #fcbc56;
+
+          a {
+             text-shadow: 1px 2px 0px darken(#fcbc56, 13%)
+          }
         }
 
         &-own {
