--- a/app/jade/tour/visa.jade
+++ b/app/jade/tour/visa.jade
@@ -52,8 +52,6 @@
 
         ol
           li
-            p.m-b-md Harga Termasuk
-          li
             p.m-b-md Ticket pesawat udara p.p. kelas ekonomi (non-endorsable, non-refundable & non-reroutable berdasarkan harga group / promosi).
           li
             p.m-b-md Penginapan di hotel berdasarkan 2 (dua) orang dalam 1 kamar (twin sharing).
@@ -71,18 +69,20 @@
 
         ol
           li
-            p.m-b-md Harga Termasuk
+            p.m-b-md Harga Tidak Termasuk
           li
-            p.m-b-md Ticket pesawat udara p.p. kelas ekonomi (non-endorsable, non-refundable & non-reroutable berdasarkan harga group / promosi).
+            p.m-b-md Airport tax International &amp; Jakarta, fuel surcharge, dan tax lainnya.
           li
-            p.m-b-md Penginapan di hotel berdasarkan 2 (dua) orang dalam 1 kamar (twin sharing).
+            p.m-b-md Asuransi perjalanan Zurich Insurance (11-15 days Individual USD 50 / Family USD 70).
           li
-            p.m-b-md Acara tour, transportasi dan makan sesuai yang tercantum dalam acara perjalanan. (MP – Makan Pagi; MS – Makan Siang; MM – Makan Malam).
+            p.m-b-md Biaya dokumen perjalanan seperti : paspor, visa, entry permit, dll.
           li
-            p.m-b-md Berat maksimum sebesar 20kg untuk 1 bagasi atau sesuai dengan peraturan maskapai penerbangan yang digunakan; dan berat maksimum 7 kg untuk 1 handbag kecil untuk dibawa ke kabin pesawat atau sesuai dengan peraturan maskapai penerbangan yang digunakan.
+            p.m-b-md Pengeluaran pribadi seperti : telepon, room service, laundry, mini bar, tambahan makanan dan minuman serta pengeluaran lainnya.
           li
-            p.m-b-md Satu buah tas cantik bagi setiap peserta.
+            p.m-b-md Tour tambahan (Optional Tour) yang mungkin diadakan selama perjalanan.
           li
-            p.m-b-md Tour Leader dari SAPTA TOUR.
+            p.m-b-md Excess baggage (biaya kelebihan barang bawaan di atas 20 kg), Biaya bea masuk yang dikenakan oleh duane di Jakarta maupun di negara yang dikunjungi. <br />Biaya Single Supplement.
+          li
+            p.m-b-md PPN 1%.
 
       .clearfix
