--- a/app/less/helper/form.less
+++ b/app/less/helper/form.less
@@ -140,3 +140,139 @@
     }
   }
 }
+
+
+.sapta-form {
+
+  &.booking {
+    .boxing {
+      border-radius: 5px;
+      -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+      padding: 8px 10px;
+
+      label {
+        color: #606060;
+        font-weight: 300;
+        font-family: "Gotham Book";
+        font-size: 11px;
+      }
+
+      input {
+        padding: 0;
+        height: auto !important;
+        font-size: 15px;
+        font-weight: 500;
+        color: #202020;
+
+        &:focus,
+        &:active {
+          outline: 0;
+          border-color: transparent;
+          .box-shadow(none);
+        }
+      }
+
+      textarea {
+        border: none;
+        font-size: 16px;
+        font-family: "Gotham Book";
+        resize: none;
+        width: 100%;
+        height: 80px;
+
+        &:focus,
+        &:active {
+          outline: 0;
+          border-color: transparent;
+          .box-shadow(none);
+        }
+      }
+
+      &.name {
+        width: 320px;
+      }
+
+      &.phone-number {
+        width: 265px;
+      }
+
+      &.email {
+        width: 382px;
+      }
+
+      &.departure,
+      &.return {
+        width: 187px;
+        padding: 5px 0 0 0;
+        position: relative;
+
+        label {
+          padding: 4px 10px;
+          margin-bottom: 2px;
+        }
+
+        input {
+          width: 100%;
+          cursor: pointer;
+          padding: 0 30px 7px 10px;
+          border-radius: 5px;
+          position: relative;
+          z-index: 1;
+          background: transparent;
+        }
+        &:after {
+          z-index: 0;
+          display: block;
+          content: " ";
+          width: 12px;
+          height: 9px;
+          background: url(../img/dropdown-icon.png) no-repeat 0 0;
+          position: absolute;
+          right: 13px;
+          bottom: 13px;
+          cursor: pointer;
+        }
+      }
+
+      &.airline {
+        width: 335px;
+      }
+
+      &.message {
+        width: 100%;
+      }
+    }
+  }
+
+  .btn {
+    text-shadow: 1px 2px 0px rgba(0, 102, 120, 1);
+  }
+
+  .btn-submit {
+    font-size: 18px;
+    font-family: "Gotham Black";
+    color: #fff;
+    height: 50px;
+    width: 205px;
+    border-radius: 5px;
+
+    &:hover,
+    &:focus,
+    &:active {
+      outline: 0;
+    }
+  }
+
+  input {
+    border:none;
+    background: #fff;
+    .box-shadow(none);
+
+    &:hover,
+    &:focus,
+    &:active {
+      outline: 0;
+    }
+  }
+}
