finished booking page

--- a/app/jade/tour/book-and-availability.jade
+++ b/app/jade/tour/book-and-availability.jade
@@ -15,7 +15,7 @@
         .arrow
 
         .return.pos-rlt.bg-white.pull-right
-          i.ico.ico-retrun
+          i.ico.ico-return
           label.text-u-c.block Return
           span.block.date
             | Selasa, &nbsp;
@@ -47,7 +47,7 @@
         .arrow
 
         .return.pos-rlt.bg-white.pull-right
-          i.ico.ico-retrun
+          i.ico.ico-return
           label.text-u-c.block Return
           span.block.date
             | Selasa, &nbsp;
@@ -79,7 +79,7 @@
         .arrow
 
         .return.pos-rlt.bg-white.pull-right
-          i.ico.ico-retrun
+          i.ico.ico-return
           label.text-u-c.block Return
           span.block.date
             | Selasa, &nbsp;
