--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -110,7 +110,7 @@
       background-position: -355px -20px;
     }
 
-    &-retrun {
+    &-return {
       width: 19px;
       height: 15px;
       background-position: -393px -15px;
@@ -157,6 +157,12 @@
       height: 24px;
       width: 24px;
       background: url(../img/arrow-left.png) no-repeat 0 0;
+    }
+
+    &-airline-circle {
+      width: 17px;
+      height: 17px;
+      background-position: -427px -14px;
     }
   }
 }
