--- a/app/jade/booking.jade
+++ b/app/jade/booking.jade
@@ -5,6 +5,7 @@ include include/mixin
 block main
 
   .booking-page
+    .wrapping-gray
     .container.display-table
       .content-left.display-cell.p-t-70.b-r
         p.m-b-lg
@@ -100,6 +101,53 @@ block main
 
             button.btn.btn-primary.btn-submit.pull-right.m-b-lg(type="submit") Make Booking
             .clearfix.m-b-xl
-
       .aside.display-cell.p-t-70
+
         h5.m-t-xs.m-b-lg.text-rounded Tour Details
+        ul.list-unstyled.tour-ticket
+          li.text-center
+            span.block The Best
+            span.block Of West Europe
+          li.bg-light.bg-white
+            i.ico.ico-departure
+            span.inline Kamis, 12 Feb ‘15
+          li.bg-light.bg-white
+            i.ico.ico-return
+            span.inline Minggu, 22 Feb ‘15
+          li.bg-white
+            i.ico.ico-time
+            span.inline 10 Days
+          li.bg-white
+            i.ico.ico-airline-circle
+            span.inline Garuda Indonesia
+          li.bg-white
+            i.ico.ico-adult
+            span.inline
+              span#count-adult 2
+              |  Person
+
+        ul.list-unstyled.tour-pricing.m-t-lg
+          li
+            span.block Total Price
+          li
+            span.block.gray.text-u-c 2 Adults Twin Share
+            span.block.light 2 x USD 3000
+            strong.block $ 6000
+          li
+            span.block.gray.text-u-c Indonesia Airport Tax
+            span.block.light 2 x Rp 100,000
+            strong.block Rp 200,000
+          li
+            span.block.gray.text-u-c International Airport Tax
+            span.block.light 2 x USD 500
+            strong.block USD 1000
+          li
+            span.block.gray.text-u-c Total Price
+            span.block.text-primary.pricing
+              span.currency USD
+              span.price
+                span $
+                span.number 7020
+
+
+        p.m-t-lg Pihak Tour tetap dapat meng-update harga. Harga final akan Anda dapatkan langsung dari Customer Service kami
