--- a/app/jade/include/header.jade
+++ b/app/jade/include/header.jade
@@ -28,7 +28,7 @@ div.navbar.navbar-fixed-top(role='navigation')
             i.ico.ico-document
             span.block DOCUMENTS
         li
-          a(href='#blog')
+          a(href='blog.html')
             i.ico.ico-blog
             span.block BLOG
 
